# algorithms

./: .gitignore  .gitmodules  README.md
algo-ds/a1-linked-list-n-tertiary-search/: README.md  linkedlist-old.cpp  linkedlist.cpp  problems.md  tertiary_search.cpp
algo-ds/a2-binary-search-tree/: README.md  bst.cpp
algo-ds/a3-heap-avl/: avl.cpp  avl.txt  heap.cpp
algo-ds/a4-dijsktra/: graph.txt  main.cpp
algo-ds/a5-topo-sort/: README.md  g1.txt  g2.txt  topo_bfs.cpp  topo_dfs.cpp
algo-ds/a6-hash-table/: README.md  main.cpp  words.txt
machine-learning/p1-nb-lr/: README.md  data.py  models.py  params_sgd.json  plot.py  run.sh  run_lr.py  run_nb.py  run_sgd.py  tune_sgd.py
machine-learning/p1-nb-lr/results/: lr.json  nb.json  sgd.json
machine-learning/p2-dtree/: README.md  plot.py  pyproject.toml  report.py  train.py
machine-learning/p3-collab-svm-knn/: README.md  requirements.txt
machine-learning/p3-collab-svm-knn/src/: download.py  part1_matrix.py  part2.py  plot.py
machine-learning/p4/: README.md
machine-learning/p4-knn-bayesnet-em/: README.md
machine-learning/p4-knn-bayesnet-em/data/: clt_results.json  mixture_results.json  p2_1_results.json
machine-learning/p4-knn-bayesnet-em/part1/: README.md
machine-learning/p4-knn-bayesnet-em/part2/: forest_search.py  forest_search.sh  model1.py  plot_forest_tune.py
machine-learning/p4/part1/: batch-compress.sh  kmeans.py  plot.py
machine-learning/p4/part2/: CLT_class.py  MIXTURE_CLT.py  README.md  forest.py  main.py  plot_all.py  train.py
(+1 files in other folders)
