[tool.poetry]
name = "dtree"
version = "0.1.0"
description = ""
authors = ["Khoi Nguyen <npnkhoi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
